# fakestream

./: Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  RESEARCH.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  RESEARCH.md  WAL.md
docs/superpowers/plans/: 2026-07-13-pr5-review-fixes.md
docs/superpowers/specs/: 2026-07-13-pr5-review-fixes-design.md
src/: main.rs  manifest.rs  metrics.rs  ops.rs  protocol.rs  store.rs  wal.rs
