[package]
name = "fakestream"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
description = "Minimal, low-memory local Amazon Kinesis Data Streams emulator"
license = "MIT"
repository = "https://github.com/pafin-inc/fakestream"
readme = "README.md"
keywords = ["kinesis", "aws", "emulator", "mock", "localstack"]
categories = ["development-tools", "development-tools::testing"]

[[bin]]
name = "fakestream"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
md-5 = "0.11"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
proptest = "1.11.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "allow"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
doc_markdown = "allow"
format_push_string = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ref_option = "allow"
unnecessary_wraps = "allow"
